--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       </header>
       <section>
         <div class="container">
-          <h3>Designed for the future</h3>
+          <h2>Designed for the future</h2>
           <div>
             <div class="text">
               <div>
@@ -205,7 +205,7 @@
             <img src="./images/illustration-phones.svg" alt="" />
           </div>
           <div class="text">
-            <h3>State of the Art Infrastructure</h3>
+            <h2>State of the Art Infrastructure</h2>
             <p>
               With reliability and speed in mind, worldwide data centers provide
               the backbone for ultra-fast connectivity. This ensures your site
@@ -290,6 +290,6 @@
         </div>
       </footer>
     </main>
-    <script src="./main.js" type="text/javascript"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
