html error fixed

--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
       </header>
       <section>
         <div class="container">
-          <h2>Designed for the future</h2>
+          <h2 class="d-center">Designed for the future</h2>
           <div>
             <div class="text">
               <div>
-                <h4>Introducing an extensible editor</h4>
+                <h3>Introducing an extensible editor</h3>
                 <p>
                   Blogr features an exceedingly intuitive interface which lets
                   you focus on one thing: creating content. The editor supports
@@ -175,7 +175,7 @@
                 </p>
               </div>
               <div>
-                <h4>Robust content management</h4>
+                <h3>Robust content management</h3>
                 <p>
                   Flexible content management enables users to easily move
                   through posts. Increase the usability of your blog by adding
@@ -232,7 +232,7 @@
             </div>
             <div class="text">
               <div>
-                <h4>Free, open, simple</h4>
+                <h3>Free, open, simple</h3>
                 <p>
                   Blogr is a free and open source application backed by a large
                   community of helpful developers. It supports features such as
@@ -243,7 +243,7 @@
                 </p>
               </div>
               <div>
-                <h4>Powerful tooling</h4>
+                <h3>Powerful tooling</h3>
                 <p>
                   Batteries included. We built a simple and straightforward CLI
                   tool that makes customization and deployment a breeze, but
